fix(compare): align checkboxes

--- a/src/features/compare/components/compare-form/styles.module.scss
+++ b/src/features/compare/components/compare-form/styles.module.scss
@@ -14,7 +14,11 @@
 }
 
 .checkboxWrapper {
-  width: max-content;
+  width: 100px;
+
+  input {
+    margin-left: auto;
+  }
 
   > div {
     flex-direction: row;
